--- a/styles.css
+++ b/styles.css
@@ -48,5 +48,5 @@ header {
 }
 
 .showcase-area {
-    background-image: url(..\C:\Users\Пользователь\Desktop\showcase.jpeg);
+    background-image: url(img/showcase.jpeg);
 }
