--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,9 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 15px 150px;
-    border: 3px solid black;    
+    position: fixed;
+    background-color: rgba(255, 255, 255, 0.6);
+    width: 100%;    
 }
 
 .navbar {
@@ -49,4 +51,14 @@ header {
 
 .showcase-area {
     background-image: url(img/showcase.jpeg);
+    background-size: cover;
+    background-position-y: -80p;
+    padding-top: -100px;
+    height: 800px;
+    
+}
+
+.showcase-container {
+    margin: 0 200px;
+    padding: 300px 0;
 }
