--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,13 @@
 
 #logo {
     width: 200px;
+    padding-bottom: 4px;
 }
 
 li {
     font-weight: 500;
     font-size: 16px;
-    color: #072AC8;
+    color: #0077b6;
 }
 
 header {
@@ -24,8 +25,9 @@ header {
     align-items: center;
     padding: 15px 150px;
     position: fixed;
-    background-color: rgba(255, 255, 255, 0.6);
-    width: 100%;    
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 100%;
+    height: 80px;    
 }
 
 .navbar {
@@ -37,28 +39,31 @@ header {
     padding: 0 20px;
     margin: 0 20px;
     font-weight: 600;
+    
 }
 
 .navbar li a {
     transform: all 0.5s ease 0s;
     text-decoration: none;
     color:#0077b6;
+    text-transform: uppercase;
 }
 
 .navbar li a:hover {
-    color: #007F5F;
+    color: #fca311;
 }
 
 .showcase-area {
     background-image: url(img/showcase.jpeg);
     background-size: cover;
-    background-position-y: -80p;
-    padding-top: -100px;
-    height: 800px;
-    
+    width: 100%;
+    height: 1000px; 
 }
 
 .showcase-container {
-    margin: 0 200px;
+    margin: 0 150px;
     padding: 300px 0;
+    color: #fca311;
+    font-size: 35px;
+    background-color: #0076b667;
 }
