--- a/styles.css
+++ b/styles.css
@@ -54,15 +54,29 @@ header {
 }
 
 .showcase-area {
-    background-image: url(img/showcase.jpeg);
+    background-image: url(img/pic1.jpg);
     background-size: cover;
     width: 100%;
-    height: 1000px; 
+    height: 50%; 
 }
 
 .showcase-container {
     margin: 0 150px;
     padding: 300px 0;
-    color: #fca311;
-    font-size: 35px;
+    color: #186ceb;
+    font-size: 30px;
+}
+
+#info {
+    background-color: aqua;
+    height: 300px;
+}
+
+#info > p {
+    margin: 0 150px;
+    padding: 300px 0;
+    background-color: yellow;
+    color: #0077b6;
+    font-size: 18px;
+    height: auto;
 }
